[tool.poetry]
name = "stream-wars-demo"
version = "0.1.0"
description = "Demo on `stream-wars` Streamlit component."
authors = ["Murilo Cunha <murilo@dataroots.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stream_wars_demo"}]

[tool.poetry.dependencies]
python = "~3.8"
streamlit = "^1.15.1"
stream-wars = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
